-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 6.0.0-beta1
-
None
Few issues:
- The description says "Creates a Qt application for the desktop" however this should be for other platforms.
- The console template shouldn't be added for Android (Android apps need gui anyways)
- The Android Virtual Device could be "Android" only.
| For Gerrit Dashboard: QTCREATORBUG-26477 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 378193,2 | Android: remove Virtual from the AndroidDeviceFactory | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 378206,2 | Wizards: Fix description of Qt Application template | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 378476,1 | WIP: Add a platform name property for IDeviceFactory | 6.0 | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |